# titanic_ml_test_1

./: Dockerfile  README.md  app.html  app_api.py  pyproject.toml  requirements.txt  train.ipynb
