[project]
name = "ml-test-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "attrs==25.1.0",
    "backports-tarfile==1.2.0",
    "build==1.2.2.post1",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "colorama==0.4.6",
    "distlib==0.3.9",
    "fastapi>=0.116.1",
    "filelock==3.18.0",
    "idna==3.10",
    "importlib-metadata==8.5.0",
    "installer==0.7.0",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.0.1",
    "jaraco-functools==4.1.0",
    "keyring==25.6.0",
    "lxml==5.3.2",
    "mlflow>=3.3.2",
    "more-itertools==10.6.0",
    "packaging==24.2",
    "pandas>=2.3.2",
    "pip==25.0.1",
    "platformdirs==4.3.7",
    "poetry-core==2.0.1",
    "prompt-toolkit==3.0.50",
    "pydantic>=2.11.8",
    "pyproject-hooks==1.2.0",
    "pyqt5==5.15.11",
    "pyqt5-sip==12.17.0",
    "pyqtwebengine==5.15.7",
    "pyxdg==0.28",
    "requests==2.32.3",
    "scikit-learn>=1.7.2",
    "setuptools==78.1.0",
    "structlog==25.2.0",
    "toml==0.10.2",
    "urllib3==2.3.0",
    "uvicorn>=0.35.0",
    "virtualenv==20.30.0",
    "wcwidth==0.2.13",
    "zipp==3.21.0",
]
